2007-08-28  Robert Sebastian Gerus  <arachnist@gmail.com>

	* configure.host: Add support for i[3-7]86-*-dragonfly*.
	* configure.tgt: Likewise.

2007-08-18  Alan Modra  <amodra@bigpond.net.au>

	* ld.texinfo (Input Section Basics): Correct EXCLUDE_FILE example.

2007-08-17  Alan Modra  <amodra@bigpond.net.au>

	* po/Make-in: Add --msgid-bugs-address to xgettext invocation.

2007-08-15  Alan Modra  <amodra@bigpond.net.au>

	PR 4923
	* emultempl/elf32.em (after_open): Return immediately when
        non-ELF output.

2007-08-12  Daniel Jacobowitz  <dan@codesourcery.com>

	* configure.in (ALL_LINGUAS): Add fi.
	* po/fi.po: New file.
	* configure: Regenerated.

2007-08-10  Nick Clifton  <nickc@redhat.com>

	* NEWS: Add a marker for the 2.18 features.

2007-08-10  Nick Clifton  <nickc@redhat.com>

	* po/ga.po: Updated Irish translation.
	* po/vi.po: Updated Vietnamese translation.

2007-08-10  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/4875
	* elf-hints-local.h: Include bfd_stdint.h.  Use uint32_t
	instead of u_int32_t.

	* sha1.h: Include bfd_stdint.h instead of <stdint.h>.

2007-08-09  Alan Modra  <amodra@bigpond.net.au>

	PR 4515
	* genscripts.sh: Delete all references to NONPAGED_TEXT_START_ADDR.
	* ldint.texinfo: Likewise.
	* emulparams/armaoutb.sh (NONPAGED_TEXT_START_ADDRESS): Delete.
	* emulparams/armaoutl.sh: Likewise.
	* emulparams/arcelf.sh (NONPAGED_TEXT_START_ADDR): Delete.
	* emulparams/bfin.sh: Likewise
	* emulparams/crisaout.sh: Likewise
	* emulparams/elf32_sparc.sh: Likewise
	* emulparams/elf32am33lin.sh: Likewise
	* emulparams/elf32b4300.sh: Likewise
	* emulparams/elf32bmip.sh: Likewise
	* emulparams/elf32mcore.sh: Likewise
	* emulparams/elf32xtensa.sh: Likewise
	* emulparams/elf64_s390.sh: Likewise
	* emulparams/elf64_sparc.sh: Likewise
	* emulparams/elf64alpha.sh: Likewise
	* emulparams/elf_i386.sh: Likewise
	* emulparams/elf_i386_be.sh: Likewise
	* emulparams/elf_i386_chaos.sh: Likewise
	* emulparams/elf_i386_ldso.sh: Likewise