@@ -1,3 +1,9 @@
+2016-12-05  Alyssa Milburn <amilburn@zall.org>
+
+	* testsuite/ld-sparc/wdispcall.s: New file.
+	* testsuite/ld-sparc/wdispcall.dd: Likewise.
+	* testsuite/ld-sparc/sparc.exp: Run new test.
+
 2007-08-28  Robert Sebastian Gerus  <arachnist@gmail.com>
 
 	* configure.host: Add support for i[3-7]86-*-dragonfly*.
